<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/lblMainTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblMaterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strMaterial" />

        <Spinner
            android:id="@+id/sprMaterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lblPendant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strPendant" />

        <Spinner
            android:id="@+id/sprPendant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lblMetalType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strMetalType" />

        <Spinner
            android:id="@+id/sprMetalType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lblCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currency" />

        <Spinner
            android:id="@+id/sprCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="calculate"
        android:text="@string/btnCalculate" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strPrice"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="resultado"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>